// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it disables the button when in progress 1`] = `
Array [
  <div>
    <span>
      unit test card code
    </span>
    <span>
      Balance: 
      <span>
        $
      </span>
      <span>
        99
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>,
  <button
    disabled={true}
    onClick={[MockFunction]}
    type="button"
  >
    <span>
      Remove
    </span>
  </button>,
]
`;

exports[`it renders correctly 1`] = `
Array [
  <div>
    <span>
      unit test card code
    </span>
    <span>
      Balance: 
      <span>
        $
      </span>
      <span>
        99
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>,
  <button
    disabled={false}
    onClick={[MockFunction]}
    type="button"
  >
    <span>
      Remove
    </span>
  </button>,
]
`;
